    permissions on upload dir 
  * [Roland] Several changes occured in PostgreSQL between versions 7.2
    and 7.3: the pg_hba.conf file syntax, the way users are authenticated,
    and data checking is stricter.  The installation process should now
    work with both versions (provided the PostgreSQL server is installed
    correctly).

 -- Roland Mas <lolando@debian.org>  Sun, 12 Jan 2003 20:00:05 +0100

gforge (3.0-0+8) experimental; urgency=low

  * [Christian] Reintroduce the possibility to define default home page in
    Themes
  * [Christian] Added subMenu in Layout
  * [Roland] Merged in everything that was done on the trunk since
    Branch_gforge was started.  That includes the plugin subsystem.
  * [Roland] Merged Branch_gforge back into the trunk.
  * [Christian] Removed dependency on php4-mcrypt
  * [Christian] Applied F. Elie patch theme init #73
  * [Christian] Applied F. Elie patch image and searchbox localisation #84 #85 

 -- Christian Bayle <bayle@debian.org>  Tue, 31 Dec 2002 13:12:48 +0100

gforge (3.0-0+7) experimental; urgency=low

  * [Christian] Added db upgrade 20021125-debian.sql
  * [Christian] See upstream Changelog
  * [Christian] Replacing html_get_alt_row_color with boxGetAltRowStyle
  * [Christian] Removed obsolete html_get_alt_row_color function
  * [Christian] FRS/QRS in gforge fashion
  * [Christian] Added Peerating parameter management

 -- Christian Bayle <bayle@debian.org>  Thu, 19 Dec 2002 00:27:27 +0100

gforge (3.0-0+5) experimental; urgency=low

  * [Christian] Merged mostly all change from gforge tree
    now changing the package name
  * [Christian] Applied Francisco Gimeno alias kikov supposed corrected patch
  * [Christian] Big renaming from sourceforge to gforge
  * [Christian] Added Jabber related French translation
  * [Christian] Added Jabber stuffs in local.inc.template
  * [Christian] Made sys_dbname sys_dbuser sys_dbhost debconf param
  * [Christian] Added gforge-sourceforge-transition package for smooth upgrade